# NetAgent

./: .env.example  .gitignore  README.md  a.json  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_device_monitoring.py  003_ai_chat.py  004_tariff_redesign.py  005_support_tickets.py  006_traffic_limits.py  007_rebrand_plans_support_reply.py  008_plan_tiers_prices.py  009_rename_combo_standard.py  010_subscription_reminders.py  (+5 more)
configs/: lithuania.json  russia-relay.json  xray-lithuania-exit.example.json  xray-russia-direct-2053.production.json  xray-russia-direct-443.production.json  xray-russia-relay-2053.example.json  xray-russia-relay-2053.production.json  xray-russia-relay.example.json  xray-russia-test-direct.example.json
docker/: Dockerfile.backup  Dockerfile.bot  Dockerfile.xray-agent  docker-compose.vpn.yml  docker-compose.yml  entrypoint-bot.sh
docs/: TZ.md  bot-brand.md  deploy-bot-russia.md  deploy-database-backup.md  deploy-database.md  deploy-exit2-relay-walkthrough.md  deploy-lithuania.md  deploy-relay.md  deploy-russia-relay-russia-only.md  deploy-russia-relay-walkthrough.md  deploy-russia-relay.md  deploy-vpn-node-abroad.md  deploy-web.md  device-enforcement.md  key-enforcement-guide.md  restore-lithuania-wifi.md  troubleshoot-russia-client.md
scripts/: build_relay_vless_link.py  clean_entry_clients.py  diagnose_vpn_entry.py  install_xray_manual.sh  test_russia_inbound_local.sh  xray_cli.py
tests/: test_agent_settings.py  test_ai_service.py  test_bot_billing.py  test_db_backup.py  test_device_monitor.py  test_openai_client.py  test_payment_service.py  test_vless_uri.py  test_vpn_nodes.py  test_webapp.py  test_xray_config_service.py  test_xray_provisioner.py
(+76 files in other folders)
