[project]
name = "netagent"
version = "0.1.0"
description = "MVP platform for selling Xray VPN subscriptions"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.14",
    "httpx==0.28.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "uvicorn[standard]==0.34.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
