[project]
name = "netagent"
version = "0.1.0"
description = "MVP platform for selling Xray VPN subscriptions"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.29.0",
    "aiohttp-socks==0.10.1",
    "alembic==1.14.1",
    "fastapi==0.115.14",
    "httpx==0.28.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "psycopg[binary]==3.2.6",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.38",
    "geoip2==4.8.1",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "itsdangerous==2.2.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
